exports[`<ChatMessage/> @renders in default state 1`] = `
<div>
  Hi, this is a mocked message
</div>
`;

exports[`<ChatMessage/> @renders when user is defined 1`] = `
<div
  title="el@gmail.com">
  Hi, this is a mocked message
</div>
`;
